--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <h1>BEST PALATONIC REALTIONSHIPS(IN ANIME)</h1>
+    <img class ="item-pic" src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637184502/handshake_qvowo4.gif"/>
+    <P>THE COLDEST HANDSHAKE FROM JAPAN</P>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637183496/twopiece_hv6evv.png"/>
+    <P>THE COLDEST GANG IN ALL OF FICTION</P>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637184494/brothers12_ycipy3.gif"/>
+    <P>SADEST WAY FOR A R3AL ONE TO GO</P>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637184497/brothers_rvbaol.gif"/>
+    <P>ONE OF THESE BROTHERS GREW UP WHILE OTHER ONE WAS GONE TOO SOON</P>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637184501/ace_eojtco.gif"/>
+    <P>ACES LAST MEMORY OF HIM FIGHTING WITH HIS YOUNGER BROTHER</P>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637184498/kannme_pjjtou.gif"/>
+    <P>REAL BROTHERS DONT LET THE OTHER, WALK DOWN THE WRONG PATH</P>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637184828/fullmetal_defiae.gif"/>
+    <P>YOU HAVE TO BE AT LEAST WILLING TO GIVE UP A ARM FOR YOUR SOMEONE YOU REALLY CARE ABOUT</P>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637185194/luckand_magna_wly0xh.gif"/>
+    <p>BEAUTIFUL FREINDSHIPS MAKE FOR THE BEST SCENES</p>
+    <img class = examp src ="https://res.cloudinary.com/mahadabdishakur/image/upload/v1637185191/luck_and_magna_tufxcc.gif"/>
+    <P>REAL BROTHERS DONT NEED BLOOD TO CONNECT THEM</P>
 </body>
 </html>
